Add teacher settings Store api url in environment

--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/teachers/teachers.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/teachers/teachers.component.html
@@ -7,7 +7,7 @@
         <div *ngFor="let teach of paginatedTeachers">
             <mat-list-item>
                 <a
-                    routerLink="/teachers/{{teach.id}}">{{teach.position + ' ' + teach.user.firstName + ' ' + teach.user.lastName + ' ' + teach.user.patronymic}}</a>
+                    routerLink="/teachers/{{teach.id}}">{{teach.position + ' ' + teach.user.firstName + ' ' + teach.user.lastName + (teach.user.patronymic ? ' ' + teach.user.patronymic : '')}}</a>
             </mat-list-item>
             <mat-divider></mat-divider>
         </div>
