--- a/Student-Perfomance-Angular-Client/src/app/modules/teacher/components/teacher-info/teacher-info.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/teacher/components/teacher-info/teacher-info.component.html
@@ -50,9 +50,9 @@
             </div> -->
         </mat-tab>
         <mat-tab label="Settings">
-            <!-- <div class="tab-container">
-                <app-group-settings (settingsChanged)="getGroup()" [group]="group"></app-group-settings>
-            </div> -->
+            <div class="tab-container">
+                <app-teacher-settings (settingsChanged)="getTeacher()" [teacher]="teacher"></app-teacher-settings>
+            </div>
         </mat-tab>
     </mat-tab-group>
 </section>
