--- a/Student-Perfomance-Angular-Client/src/app/modules/admin/components/add-group/add-group.component.css
+++ b/Student-Perfomance-Angular-Client/src/app/modules/admin/components/add-group/add-group.component.css
@@ -1,12 +1,20 @@
-form {
+.fields-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
 }
-form button, mat-form-field {
-    height: fit-content;
+section {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-section button {
-    margin-top: 10px;
+.fields-container > mat-form-field {
+    margin: 0 10px;
+}
+.action-buttons-container {
+    width: 100%;
+    display: flex;
+    margin-top: 5px;
+    padding: 15px 10px 0 10px;
+    justify-content: space-between;
+    border-top: 1px #808080 solid;
 }
