--- a/Student-Perfomance-Angular-Client/src/app/modules/admin/components/add-lesson/add-lesson.component.css
+++ b/Student-Perfomance-Angular-Client/src/app/modules/admin/components/add-lesson/add-lesson.component.css
@@ -4,9 +4,11 @@ form {
     align-items: center;
     flex-wrap: wrap;
 }
-form button, mat-form-field {
-    height: fit-content;
-}
-section button {
-    margin-top: 10px;
+.action-buttons-container {
+    width: 100%;
+    display: flex;
+    margin-top: 5px;
+    padding: 15px 10px 0 10px;
+    justify-content: space-between;
+    border-top: 1px #808080 solid;
 }
