--- a/Student-Perfomance-Angular-Client/src/app/modules/admin/components/add-lesson/add-lesson.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/admin/components/add-lesson/add-lesson.component.html
@@ -1,28 +1,3 @@
-<!-- <div>
-    <form [formGroup]="createLessonForm" novalidate (ngSubmit)="createLesson()">
-        <label for="title">Lesson title:</label>
-        <input id="title" type="text" formControlName="title" />
-        <div *ngIf="title.pending">Validating...</div>
-        <div *ngIf="title.invalid && (title.dirty || title.touched)">
-            <div *ngIf="title.errors.uniqueTitle">
-                This title is already taken
-            </div>
-            <div *ngIf="title.errors.required">
-                Title is required.
-            </div>
-            <div *ngIf="title.errors.minlength">
-                Title must be at least 2 characters long.
-            </div>
-            <div *ngIf="title.errors.maxlength">
-                Title must be less then 30 characters long.
-            </div>
-        </div>
-        <button type="submit" [disabled]="createLessonForm.invalid">
-            Create lesson
-        </button>
-    </form>
-    <a routerLink="/lessons">Cancel</a>    
-</div> -->
 <section>
     <h3>Create lesson</h3>
     <form [formGroup]="createLessonForm" novalidate (ngSubmit)="createLesson()">
@@ -36,9 +11,11 @@
                 <div *ngIf="title.errors.maxlength">Title must be less then 50 characters long</div>
             </mat-error>
             <mat-hint align="end">{{input.value?.length || 0}}/50</mat-hint>
-          </mat-form-field>
-        <div *ngIf="title.pending">Validating...</div>
-        <button mat-stroked-button color="accent" type="submit" [disabled]="createLessonForm.invalid">Create lesson</button>
+        </mat-form-field>
+        <div class="action-buttons-container">
+            <a mat-stroked-button color="warn" routerLink="/lessons">Cancel</a>
+            <button mat-stroked-button color="accent" type="submit" [disabled]="createLessonForm.invalid">Create
+                lesson</button>
+        </div>
     </form>
-    <a mat-stroked-button color="warn" routerLink="/lessons">Cancel</a>
 </section>
