--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/lesson-info/lesson-info.component.css
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/lesson-info/lesson-info.component.css
@@ -11,3 +11,37 @@ mat-tab-group {
 .header-container {
     margin: 15px;
 }
+.invisible-divider {
+    display: flex;
+    height: 20px;
+}
+.entity-header {
+    display: flex;
+    background-color: #212121;
+    height: 80px;
+    border-bottom: 1px gray solid;
+}
+.entity-avatar {
+    width: 80px;
+    background-color: #3a3a3a;
+    border-radius: 2px;
+    margin-right: 20px;
+    display: flex;
+    flex: none;
+    justify-content: center;
+}
+i {
+  align-self: center;
+}
+.header-info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.header-info-block {
+    margin-top: 5px;
+    margin-right: 25px;
+}
+.header-info-block h4, p {
+    margin-bottom: 0;
+}
